# bucketeer-web-sdk

./: .bazelrc  .browserslistrc  .eslintrc.js  .gitignore  .npmignore  BUILD.bazel  CHANGELOG.md  Makefile  README.md  WORKSPACE  ava-e2e.config.js  ava-test.config.js  babel.config.js  package.json  rollup.config.js  tsconfig.json  tsconfig.test.json
.github/workflows/: publish-npm.yaml  pull-request.yaml  pull_request.yaml  release.yaml
e2e/: e2e.ts
example/: Makefile  README.md  package.json  tsconfig.json  webpack.config.js
example/src/client/: index.ts  tsconfig.json
example/src/server/: index.ts  tsconfig.json
example/views/: index.html
src/: BUILD.bazel  index.ts  schedule.ts  shared.ts
src/__tests__/: _helper.ts  destroy_dataIsSetToLocalStorage.ts  destroy_removeScheduleWorks.ts  getBuildInfo.ts  getEvaluation.ts  getStringVariation_eventIsSetCorrectly.ts  getStringVariation_whenDefaultIsUsed.ts  getStringVariation_whenValueExist.ts  getUser.ts  initialize_returnError.ts  initialize_useCallback.ts  setUser.ts  track.ts
src/api/: BUILD.bazel  fetch.ts  getEvaluations.ts  registerEvents.ts  shared.ts
src/api/__tests__/: _helper.ts  getEvaluations.ts  post.ts  registerEvents.ts
src/objects/: BUILD.bazel  Duration.ts  Evaluation.ts  EvaluationEvent.ts  GetEvaluationLatencyMetricsEvent.ts  GetEvaluationSizeMetricsEvent.ts  GoalEvent.ts  MetricsEvent.ts  Reason.ts  SourceId.ts  User.ts  Variation.ts
src/objects/__tests__/: Evaluation.ts
src/storage/: BUILD.bazel  shared.ts  storage.ts
src/stores/: BUILD.bazel  EvaluationStore.ts  EventStore.ts
src/stores/__tests__/: EvaluationStore.ts  EventStore.ts
tools/ava/: MockLocalStorage.js  setupWindow.js
