package(default_visibility = ["//visibility:private"])

exports_files(
    [
        "tsconfig.json",
        "rollup.config.js",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "web",
    srcs = [
        "//src:bucketeer",
        "//src:bucketeer.min",
        "//src:es5",
    ],
)
