load("@npm_bazel_typescript//:index.bzl", "ts_library")

package(default_visibility = ["//src:__subpackages__"])

ts_library(
    name = "EvaluationStore",
    srcs = [
        "EvaluationStore.ts",
    ],
    tsconfig = "//:tsconfig.json",
    deps = [
        "//src/objects:Evaluation",
        "@npm//@types/node",
        "@npm//option-t",
    ],
)

ts_library(
    name = "EventStore",
    srcs = [
        "EventStore.ts",
    ],
    tsconfig = "//:tsconfig.json",
    deps = [
        "//src/objects:EvaluationEvent",
        "//src/objects:GoalEvent",
        "//src/objects:MetricsEvent",
        "@npm//@types/node",
        "@npm//option-t",
    ],
)
